<resources>
    <string name="app_name">Needle</string>
    <string name="facebook_app_id">1085989064752650</string>
    <string name="title_haystacks">Haystacks</string>
    <string name="title_needle">Needle</string>
    <string name="title_needles">Needles</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_people">People</string>
    <string name="title_settings">Settings</string>
    <string name="title_helpAndSupport">Help &amp; Support</string>
    <string name="create">Create</string>
    <string name="ends">Ends %1$s</string>
    <string name="yes">Yeah</string>
    <string name="no">Nah</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Okay</string>
    <string name="rememberMeSummary">Make the Needle remember your credentials</string>
    <string name="notificationsSummary">Allow Needle to Notify you about events that occur</string>
    <string name="app_settings">App Settings</string>
    <string name="google_account">Google Account</string>
    <string name="revoke_access">Revoke Access</string>
    <string name="revoke_google_access">Revoke Google Account Access</string>
    <string name="revoke_google_access_confirmation_msg">Are you sure you want to revoke Needle\'s access to your Google account?</string>
    <string name="initializing">Initializing ...</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="rememberMe">Remember Me</string>
    <string name="notifications">Notifications</string>
    <string name="username">Username</string>
    <string name="email_hint">Email Address</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="publicHeader">Public</string>
    <string name="privateHeader">Private</string>
    <string name="ownedHeader">My Haystacks</string>
    <string name="noHaystackAvailable">No Haystacks Available</string>
    <string name="activeUsers"> Active Users</string>
    <string name="map_view">Map View</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="name">Name</string>
    <string name="isPublic">Public</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="friend">Friend</string>
    <string name="expiration">Expiration</string>
    <string name="privateLabel">Private</string>
    <string name="location">Location</string>
    <string name="users">Users</string>
    <string name="search_for_places">Search for Places</string>
    <string name="done">Done</string>
    <string name="picture">Picture</string>
    <string name="create_haystack">Create Haystack</string>
    <string name="add_users">Add Users</string>
    <string name="leave_haystack">Leave Haystack</string>
    <string name="shareLocation">Share My Location</string>
    <string name="confirm">Confirm</string>
    <string name="haystack_created">Haystack Created</string>
    <string name="title_users">Users</string>
    <string name="title_pins">Pins</string>
    <string name="haystack_name_hint">Haystack Name</string>
    <string name="general_infos">General Infos</string>
    <string name="receivedHeader">Received</string>
    <string name="sentHeader">Sent</string>
    <string name="log_out">Log Out</string>
    <string name="log_out_confirmation_msg">Are you sure you want to log out?</string>
    <string name="cancel_haystack">Cancel Haystack</string>
    <string name="cancel_haystack_confirmation">Are you sure you want to cancel this Haystack ?</string>
    <string name="cancel_haystack_leave_confirmation">Are you sure you want to leave this Haystack ?</string>
    <string name="creating_haystack">Creating Haystack...</string>
    <string name="haystack_name_error_msg">Haystack needs a name</string>
    <string name="haystack_users_error_msg">Haystack needs other users</string>
    <string name="haystack_creation_failed_msg">Could not create Haystack. Try again !</string>
    <string name="haystack_image_upload_failed_msg">An error occured while uploading Haystack\'s Image</string>
    <string name="fetch_haystack_error">Could Not Fetch Haystacks</string>
    <string name="share_location_back">Share Location Back</string>
    <string name="location_shared_back">Location Shared Back!</string>
    <string name="location_share_back_cancelled">Location Share Back Cancelled!</string>
    <string name="stop_sharing_location">Stop Sharing Location</string>
    <string name="fetch_needles_error">Could Not Fetch Needles</string>
    <string name="cancelling_needle">Cancelling Needle...</string>
    <string name="needle_expired">Needle Expired</string>
    <string name="needle_expired_msg">Needle with %1$s expired. Taking you back home.</string>
    <string name="needle_cancelled">Needle Cancelled</string>
    <string name="needle_cancelled_msg">Needle with %1$s was cancelled. Taking you back home.</string>
    <string name="cancel_needle_confirmation">Are you sure you want to cancel this Needle ?</string>
    <string name="noNeedleAvailable">No Needle Available</string>
    <string name="create_needle">Create Needle</string>
    <string name="creating_needle">Creating Needle...</string>
    <string name="send_needle_to">Send Needle to %1$s</string>
    <string name="sending_needle_to">Sending Needle to %1$s</string>
    <string name="no_notifications_yet">No notifications yet</string>
    <string name="user_not_found_message">User not foud. Please Register first</string>
    <string name="nearby_places">Nearby Places</string>
    <string name="search_results">Search Results</string>
    <string name="recent_places">Recent Places</string>
    <string name="action_search_item_selected">searchItemSelected</string>
    <string name="action_search_started">searchStarted</string>
    <string name="action_search_finished">searchFinished</string>
    <string name="searchFragmentTag">searchFragmentTag</string>
    <string name="set_haystacks_location">Set Haystack\'s Location</string>
    <string name="action_lock_map">Lock Map</string>
    <string name="action_polygon">Polygon</string>
    <string name="terms_and_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="logged_in_with_needle_account">Needle Account</string>
    <string name="logged_in_with_google_account">Google Account</string>
    <string name="logged_in_with_facebook_account">Facebook Account</string>
    <string name="logged_in_with_twitter_account">Twitter Account</string>
    <string name="no_users_added">No users were added to the Haystack</string>
    <string name="users_added">users added to the Haystack</string>
    <string name="error_adding_users">Error adding users to the Haystack</string>
    <string name="select_users_to_add">Select users to add</string>
    <string name="fetching_users_failed">Fetching users failed</string>
    <string name="new_pin">New Pin</string>
    <string name="set_pins_location">Set Pin\'s Location</string>
    <string name="pin_name">Pin Name</string>
    <string name="add_pin">Add Pin</string>
    <string name="pref_key_show_notifications" translatable="false">pref_key_show_notifications</string>
    <string name="pref_key_ringtone_notifications" translatable="false">pref_key_ringtone_notifications</string>
    <string name="pref_key_led_notifications" translatable="false">pref_key_led_notifications</string>
    <string name="pref_key_vibrate_notifications" translatable="false">pref_key_vibrate_notifications</string>
    <string name="pref_key_location_permission" translatable="false">pref_key_location_permission</string>
    <string name="pref_key_storage_permission" translatable="false">pref_key_storage_permission</string>
    <string name="pref_key_account" translatable="false">pref_key_account</string>
    <string name="pref_key_general" translatable="false">pref_key_general</string>
    <string name="pref_cat_notifications">Notifications</string>
    <string name="pref_notifications_summary">Receive Push Notifications</string>
    <string name="pref_push_notifications">Push Notifications</string>
    <string name="pref_ringtone">Ringtone</string>
    <string name="pref_ringtone_summary">Play ringtone when a notification is received</string>
    <string name="pref_led">Light</string>
    <string name="pref_led_summary">Indicate a notification has been received by flashing the notification light</string>
    <string name="pref_vibrate">Vibration</string>
    <string name="pref_vibrate_summary">Vibrate when a notification is received</string>
    <string name="pref_cat_permissions">Permissions</string>
    <string name="pref_location_permission">Location</string>
    <string name="pref_location_summary">Allow access to device\'s location</string>
    <string name="pref_storage_permission">Storage</string>
    <string name="pref_storage_summary">Allow access to device\'s storage</string>
    <string name="pref_cat_account">Account</string>
    <string name="edit_account">Edit Account</string>
    <string name="friends">Friends</string>
    <string name="friend_requests">Friend Requests</string>
    <string name="sent_friend_requests">Sent Requests</string>
    <string name="friend_request_accepted">Friend Request Accepted</string>
    <string name="friend_request_rejected">Friend Request Rejected</string>
    <string name="friend_request_cancelled">Friend Request Cancelled</string>
    <string name="unfriend_successful">User Unfriended</string>
    <string name="friend_request_sent">Friend Request Sent</string>
    <string name="fetch_friends_error">Could Not Fetch Friends</string>
    <string name="no_one_here">No One Here</string>
    <string name="discover">Discover</string>
    <string name="permission_granted" translatable="false">permission_granted</string>
    <string name="permission_denied" translatable="false">permission_denied</string>
    <string name="permission_granted_msg">%1$s permission is granted</string>
    <string name="permission_denied_msg">%1$s permission is denied</string>
    <string name="delete_account">Delete Account</string>
    <string name="delete_account_info">This will delete your account permanently</string>
    <string name="facebook_account">Facebook Account</string>
    <string name="google_account_title">Google Account</string>
    <string name="unfriend">Unfriend</string>
    <string name="accept_friend_request">Accept Request</string>
    <string name="cancel_friend_request">Cancel Request</string>
    <string name="reject_friend_request">Reject Request</string>
    <string name="add_friend">Add Friend</string>
    <string name="add_to_group">Add to Group</string>
    <string name="send_needle">Send Needle</string>
    <string name="image_upload_failed_msg">An error occured while uploading the picture</string>
    <string name="image_upload_success_msg">Picture Uploaded!</string>
    <string name="about">About</string>
    <string name="write_us">Write us</string>
    <string name="debug">Debug Infos</string>
    <string name="debug_version">Needle version %1$s</string>
    <string name="call">Give Us A Call</string>
    <string name="send_email">Send Us An Email</string>
    <string name="send_email_intent_title">Send Email...</string>
    <string name="visit_website">Visit Our Website</string>
    <string name="website_url">http://www.needle-app.com</string>
    <string name="follow_facebook">Follow us on Facebook</string>
    <string name="follow_twitter">Follow us on Twitter</string>
    <string name="follow_youtube">Follow us on YouTube</string>
    <string name="faq">FAQ</string>
    <string name="copyright_info">© Nemator, 2016</string>
    <string name="help">Help</string>
</resources>