<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.nemator.needle.fragments.locationSharing.createLocationSharing.CreateLocationSharingFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <!-- Friend -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="bottom">

            <TextView
                android:id="@+id/new_location_sharing_friend_label"
                android:textStyle="bold"
                android:layout_width="140dp"
                android:layout_height="match_parent"
                android:textColor="@android:color/black"
                android:text="@string/friend"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="15dp"
                android:drawableLeft="@drawable/ic_label_outline_black_24dp"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"/>

            <AutoCompleteTextView
                android:id="@+id/new_location_friend"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:hint="@string/friend_name_hint"
                android:singleLine="true"
                android:layout_gravity="bottom"
                android:inputType="textAutoCorrect"/>

        </LinearLayout>

        <!-- Expiration -->
        <!-- Date -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/new_haystack_date_label"
                android:textStyle="bold"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/black"
                android:gravity="center_vertical"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="5dp"
                android:drawableLeft="@drawable/ic_event_black_24dp"
                android:drawablePadding="8dp"/>

            <EditText
                android:id="@+id/dateLimitEditText"
                android:textStyle="bold"
                android:editable="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2015-01-14"
                android:textAlignment="center"
                android:textColor="@color/primary"
                android:layout_centerHorizontal="true"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_marginLeft="16dp" />

        </LinearLayout>

        <!-- Time -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/new_haystack_time_label"
                android:textStyle="bold"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/black"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="0dp"
                android:drawableLeft="@drawable/ic_timer_black_24dp"
                android:drawablePadding="8dp"
                android:gravity="center_vertical" />

            <EditText
                android:id="@+id/timeLimitEditText"
                android:textStyle="bold"
                android:editable="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="00:00:00"
                android:textAlignment="center"
                android:textColor="@color/primary"
                android:layout_centerHorizontal="true"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_marginLeft="16dp"
                />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>
